# simple-minting

./: LICENSE  README.md  cabal.project  simple-minting.cabal
app/: Main.hs
assets/: freePolicy.plutus  tokenname
keys/: jack.addr  jack.skey  jack.vkey  minting-transaction.tx  minting-transaction.txbody
scripts/: minting-transaction.sh
src/: Minting.hs
