cabal-version:   3.0
name:            simple-minting
version:         0.1.0.0
license:
build-type:      Simple
extra-doc-files: README.md

common warnings
  ghc-options: -Wall

library
  import:           warnings
  default-language: Haskell2010
  hs-source-dirs:   src
  exposed-modules:  Minting
  build-depends:    base
                  , base16-bytestring
                  , bytestring
                  , cardano-api          ^>=9.0.0.0
                  , cardano-api:internal ^>=9.0.0.0
                  , plutus-core          ^>=1.30
                  , plutus-ledger-api    ^>=1.30
                  , plutus-tx            ^>=1.30
                  , plutus-tx-plugin     ^>=1.30
  
executable simple-minting
  import:           warnings
  default-language: Haskell2010
  main-is:          Main.hs
  hs-source-dirs:   app
  build-depends:    base
                  , cardano-api
                  , simple-minting
